# week10-lab3/docs/swagger.json
@@ -11,7 +11,10 @@
     "paths": {
         "/books": {
             "get": {
-                "description": "List all books (optional filter by ?year=YYYY)",
+                "description": "Get all books or filter by year\nGet details of specific book",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -27,6 +30,12 @@
                             "items": {
                                 "$ref": "#/definitions/main.Book"
                             }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
                     "500": {
@@ -85,6 +94,9 @@
         "/books/new": {
             "get": {
                 "description": "Get latest books ordered by created date",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -92,6 +104,14 @@
                     "Books"
                 ],
                 "summary": "Get new books",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Number of books to return (default 5)",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
